  * Added support for UTF-8 ImageFonts.
  * Added Font:getAscent/getDescent/getBaseline.
  * Added Font:setFilter/getFilter.
  * Added angle, scale, and shear parameters to love.graphics.printf.
  * Added HDR canvas support.
  * Added mipmapping support (has isSupported test).
  * Added vertex shader support.
  * Added boolean support to Shader:send.
  * Added Canvas:getPixel.
  * Added blend mode "none".
  * Added SpriteBatch:isEmpty and SpriteBatch:isFull.
  * Added Geometry objects (replaces Quads), allowing for arbitrary textured polygons.
  * Added love.graphics.setCanvases (multiple render targets.)
  * Added love.graphics.setColorMask.
  * Added love.graphics.setAlphaTest.
  * Added love.graphics.origin.
  * Added love.graphics.getRendererInfo.
  * Added ParticleSystem:emit.
  * Added many ParticleSystem getter methods.
  * Added DXT-compressed texture support via love.image.newCompressedData.
  * Added love.image.isCompressed and Image:isCompressed.
  * Added Image/Canvas/ImageData:getDimensions.
  * Added anisotropic filtering support for Images, Canvases, and Fonts.
  * Added Image:refresh.
  * Added SoundData:getDuration and SoundData:getSampleCount.
  * Added Source:isPlaying.
  * Added new Channels api for love.thread.
  * Added Thread:getError.
  * Added love.math module.
  * Added a platform-independent (good) random implementation to love.math.
  * Added RandomGenerator objects and love.math.newRandomGenerator.
  * Added BezierCurve objects and love.math.newBezierCurve.
  * Added love.math.triangulate and love.math.isConvex.
  * Added love.math.noise.
  * Added love.timer.getAverageDelta.
  * Added Data:getString.
  * Added Contact:getChildren.
  * Added love.window module.
  * Added flags to love.window.setMode.
  * Added support for resizable, borderless, and non-centered windows.
  * Added resize event.
  * Added love.window.getDimensions.
  * Added love.mousefocus and love.window.hasMouseFocus.
  * Added love.mouse.setX/setY.